# tzinfo

./: .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
tests/: test_init.py  test_tzinfo.py  test_tzinfo_2nd.py
tzinfo/: tzinfo.py
